client/src/main.css
/* general */

body {
	font-family: "Open Sans", sans-serif;
	background-color: #eee;
	color: #444;
	font-size: 14;
}

#verticalflex {
	display: flex;
	flex-direction: column;
}

.gear rect {
	fill: rgba(238, 238, 238, 0.8);
	stroke: none;
}

/* per day view */

#perdayviewdiv {
	display: flex;
	flex-direction: column;
	align-items: center
}

#perdayview .all .bars {
	stroke-width: 0;
	fill: #ae161e;
	shape-rendering: crispEdges;
}

.view1barback {
	opacity: 0.1;
}

#perdayview .all .axes .xaxis .tick text {
	display: none;
}

#userview .all .axes .yaxis .tick text {
	display: inherit;
}

#userview_bot .axislabel, #userview_top .axislabel {
	fill: #444;
}

#binsize {
	width: 30px;
	line-height: 1.5;
}

#binslider {
	width: 815px;
}

#binslider .draggertext {
	opacity: 0;
}

#setbinsize {
	line-height: 1.5;
}

.transbars {
	opacity: 0;
	fill: #F0F;
}

.barsquare {
	shape-rendering: crispEdges;
}

/* user view */

#userviewcontainer {
	display: flex;
	flex-direction: column;
	align-items: center;
}

#userviewcontainer h2 {
	margin-top: 0px;
}

#userview_centercontainer {
	display: flex;
	flex-direction: row;
}

.clusterbox {
	fill: rgba(255, 255, 255, 0);
	shape-rendering: crispEdges;
	stroke-width: 2px;
}

.axissvg .tick text {
	display: none;
}

.likeline {
	stroke: #4c568c;
	stroke-width: 1pt;
	fill: none;
}

.likelinedot {
	fill: #4c568c;
}

.likelinetext {
	font-size: 10px;
	fill: #373f68;
}

.bottomline {
	stroke: #000;
	shape-rendering: crispEdges;
}

.subxaxis text {
	fill: #000;
}

.label_likesperchapter {
	font-size: 12px;
}

.clusterbox:hover {
	fill: rgba(229, 244, 253, 0.3);
	stroke: rgba(0, 0, 0, 1);
}

.canvascluster {
	border: 2px solid black;
}

.dataline {
	fill: none;
	stroke-width: 1pt;
	stroke: #000;
}

.normalline {
	fill: none;
	stroke-width: 1pt;
	stroke: #666666;
}

.tooltip {
	pointer-events: none;
}

.tooltipDot {

}

.tooltiptext {
	font-size: 12pt;
	fill: white;
	text-anchor: middle;
}

.tooltipguide {
	fill: none;
	stroke-width: 1pt;
	stroke: #000;
}

.tooltiptext rect {
	fill: rgba(0, 0, 0, 0.8);
	stroke-width: 1pt;
	stroke: #000000;
}

text {
	font-family: "Open Sans", sans-serif;
}

.userviewdivs {
	float: left;
	display:inline;
	margin-bottom: 10px;
}

#perdayviewdiv {
	margin-bottom: 20px;
}

#userlist {
	height: 450px;
	overflow-y: auto;
	margin-left: 3px;
	border-top: 1px solid black;
	width: 230px;
}

#userlistdiv td:nth-child(2) {
	width: 3em;
}

#userlistdiv td:nth-child(3) {
	width: 10em;
}

.username {
	display: block;
	background-color: rgba(255, 0, 255, 0);
}

/* first impressions */

#firstimpressionsdiv {
	display: flex;
	flex-direction: column;
	align-items: center
}

.markpath {
	stroke-width: 1px;
	stroke: #000;
	fill: rgba(0, 0, 0, 0.1);
}

.longtail {
	stroke-width: 1px;
	stroke: rgba(0, 0, 0, 0.3);
	stroke-dasharray: 2;
	fill: none;
}

.markcap {
	fill: rgb(0, 0, 0);
	stroke: none;
}

.drag_hitbox {
	opacity: 0;
}

#firstimpressions_windowslider {
	width: 800px;
}

#firstimpressions_windowslider .draggertext {
	opacity: 0;
}

